# Milvus-HA-Cluster

./: .env.example  .gitignore  Diagram-1.md  Diagram-2.md  Diagram.md  README.md  diagram.mermaid  docker-init.sh  http-client.env.json  main.py  milvus-cluster.docker-compose.yml  milvus-standalone.docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-fastapi.txt  requirements.txt  test_main.http
.devcontainer/: cluster.readme.md  etcd.Dockerfile  milvus-dashboard.json  milvus.Dockerfile  minio.Dockerfile  nginx.Dockerfile  prometheus.Dockerfile  prometheus.yml  pulsar.Dockerfile
.devcontainer/cfg/: milvus-cluster.orig.yaml  milvus-cluster.yaml  milvus.yaml  nginx.conf  prometheus.yml
.devcontainer/services/etcd/: etcd.Dockerfile  etcd.yaml  haproxy.Dockerfile
.devcontainer/services/etcd/cfg/: haproxy.cfg
.devcontainer/services/grafana/: grafana.Dockerfile  grafana.yaml  milvus-dashboard.json  milvus-k8s-dashboard.json
.devcontainer/services/haproxy/: haproxy.Dockerfile  haproxy.yaml
.devcontainer/services/haproxy/cfg/: haproxy.cfg
.devcontainer/services/milvus/: haproxy.Dockerfile  milvus-cluster.yaml  milvus.Dockerfile
.devcontainer/services/milvus/cfg/: haproxy.cfg  milvus-cluster.yaml  milvus.yaml  milvus_orig.yaml
.devcontainer/services/minio/: README.md  haproxy.Dockerfile  minio.Dockerfile  minio.yaml
.devcontainer/services/minio/cfg/: haproxy.cfg  minio-user.sh  minio.service
.devcontainer/services/postgres/: .env.example  ENV.md  ENVIRONMENT-PostgreSQL.md  README.md  apply_ssl_config.sh  client.Dockerfile  create_secrets.sh  custom-entrypoint.sh  docker-run.sh  generate_certificates.sh  haproxy.Dockerfile  init-replica.sh  patroni.Dockerfile  patroni.mermaid  patroni.yaml  patroni.yml  pg_repository.sh  postgres.Dockerfile  postgres.http  postgres.yaml  postgres.yml  postgres_test.sh  setup.md
.devcontainer/services/postgres/cfg/: haproxy.cfg  haproxy.cfg.tmpl  patroni-conf.yml  pg_hba.conf  postgresql-base.conf  postgresql-master.conf  postgresql-replica.conf  postgresql.auto.conf  ssl_config.yml
.devcontainer/services/postgres/initdb.d/: 00_init.sql  init-user-db.sh
.devcontainer/services/postgres/scripts/: apply_config.sh  apply_ssl_config.sh  fetch_secrets.sh  generate_pgpass.sh
.devcontainer/services/postgres/secrets/: postgres_password.txt  repl_password.txt
.devcontainer/services/prometheus/: prometheus.yaml
.devcontainer/services/prometheus/cfg/: prometheus.yml  prometheus_orig.yml
.devcontainer/services/pulsar/: README.md  bookie.Dockerfile  broker.Dockerfile  proxy.Dockerfile  pulsar.Dockerfile  pulsar.yaml  zookeeper.Dockerfile
.devcontainer/services/pulsar/cfg/: bookkeeper.conf  broker.conf  haproxy.cfg  proxy.conf
.devcontainer/services/pulsar/scripts/: zookeeper.sh
devcontainer/services/etcd/: README.md
devcontainer/services/etcd/scripts/: etcd_healthcheck.sh
devcontainer/services/haproxy/: haproxy.md  haproxy.yaml
devcontainer/services/haproxy/cfg/: haproxy.cfg
devcontainer/services/milvus/: milvus-cluster.yaml  milvus.Dockerfile
devcontainer/services/milvus/cfg/: milvus.yaml
devcontainer/services/minio/: README.md
devcontainer/services/postgres/: client.yaml  patroni.Dockerfile  postgres.Dockerfile
devcontainer/services/prometheus/: README.md  prometheus.Dockerfile  prometheus.yaml
devcontainer/services/prometheus/cfg/: prometheus.yml
devcontainer/services/pulsar/: Document.md  README.md  base.Dockerfile  bookie.Dockerfile  broker.Dockerfile  haproxy.Dockerfile  pulsar-standalone.yaml  pulsar.Dockerfile  pulsar.yaml  zookeeper.Dockerfile
devcontainer/services/pulsar/cfg/: bookkeeper.conf  broker.conf  haproxy.cfg  zookeeper.conf
devcontainer/services/pulsar/scripts/: bookkeeper.sh  broker.sh  proxy.sh  zookeeper.sh
src/: __config__.py  exceptions.py  interfaces.py  logger.py  main.py  milvus.py  tutorial.py  utils.py
src/diagrams/: diagram.ipynb  diagram.py
src/milvus/: admin.py  collection.py  connect.py  data.py  embedding.py  exceptions.py  flyweight.py  index.py  insert.py  interfaces.py  mediator.py  memento.py  milvus.py  monitor.py  partition.py  proxy.py  query.py  search.py  singleton_meta.py  state.py  stats.py  vector.py
tests/: conftest.py  milvus_test.py  test_connect.py  test_milvus.py  test_milvus_api.py  test_utils.py
tests/tmp/: config.json  test.env
(+3 files in other folders)
