[project]
name = "milvus-ha-cluster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "cryptography>=45.0.4",
    "dotenv>=0.9.9",
    "pymilvus>=2.5.11",
    "ruff>=0.11.13",
    "tenacity>=9.1.2",
]
